fixed keyboard capture of canvas

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,8 +19,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="renderutils.js"></script>
-    <script src="audioutils.js"></script>
+    <script src="js/renderutils.js"></script>
+    <script src="js/audioutils.js"></script>
 
 
     <script>
@@ -28,20 +28,29 @@
         const downKeys = [];
         let audioHelper;
 
+
         document.body.addEventListener("keydown", function (e) {
+            if (e.target.tagName === "INPUT") {
+                return true;
+            }
             const index = downKeys.indexOf(e.keyCode);
             if (index < 0) {
                 downKeys.push(e.keyCode);
             }
             e.preventDefault();
+            return false;
         });
         document.body.addEventListener("keyup", function (e) {
+            if (e.target.tagName === "INPUT") {
+                return true;
+            }
             const index = downKeys.indexOf(e.keyCode);
             if (index > -1) {
                 downKeys.splice(index, 1);
             }
             upKeys.push(e.keyCode);
             e.preventDefault();
+            return false;
         });
 
         const frameTime = 35;
