--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <app>Loading...</app>
-
+    <div id="fps"></div>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
@@ -21,7 +21,6 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/renderutils.js"></script>
     <script src="js/audioutils.js"></script>
-
 
     <script>
         const upKeys = [];
@@ -57,7 +56,10 @@
         let lastFrameTimestamp = -frameTime;
 
         window.gameLoop = function (timestamp) {
-            if (timestamp - lastFrameTimestamp >= frameTime) {
+            const duration = timestamp - lastFrameTimestamp
+            if (duration >= frameTime) {
+                const fpsElement = document.getElementById("fps");
+                fpsElement.innerHTML = `FPS: ${(1000 / duration).toFixed(2)}`;
                 lastFrameTimestamp = timestamp;
                 DotNet.invokeMethod('BlazorDoom', 'GameLoop', downKeys, upKeys);
                 upKeys.splice(0, upKeys.length);
