--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
         <link href="css/app.css" rel="stylesheet" />
         <link rel="manifest" href="manifest.json" />
-        <script type="module" src="./main.js"></script>
+
+        <script></script>
+
         <script type="module" src="./audioutils.js"></script>
+        <script type="module" src="./main.js"></script>
+        <script type="module" src="./dotnet.js"></script>
         <link
             rel="preload"
             href="./mono-config.json"
@@ -39,111 +43,13 @@
     </head>
 
     <body>
+        <div id="install_button" style="visibility: hidden"></div>
+        <div id="fps"></div>
         <canvas
             id="canvas"
             width="320"
             height="320"
             style="width: 100%; height: auto; image-rendering: pixelated"
         ></canvas>
-        <div id="fps"></div>
-        <div id="install_button" style="visibility: hidden"></div>
-        <div id="blazor-error-ui">
-            An unhandled error has occurred.
-            <a href="" class="reload">Reload</a>
-            <a class="dismiss">🗙</a>
-        </div>
-        <script>
-            const upKeys = [];
-            const downKeys = [];
-            let audioHelper;
-
-            document.body.addEventListener("keydown", function (e) {
-                if (e.target.tagName === "INPUT") {
-                    return true;
-                }
-                const index = downKeys.indexOf(e.keyCode);
-                if (index < 0) {
-                    downKeys.push(e.keyCode);
-                }
-                e.preventDefault();
-                return false;
-            });
-            document.body.addEventListener("keyup", function (e) {
-                if (e.target.tagName === "INPUT") {
-                    return true;
-                }
-                const index = downKeys.indexOf(e.keyCode);
-                if (index > -1) {
-                    downKeys.splice(index, 1);
-                }
-                upKeys.push(e.keyCode);
-                e.preventDefault();
-                return false;
-            });
-
-            // frameTime = 1000 / fps
-            const frameTime = 1000 / 35;
-            let lastFrameTimestamp = -frameTime;
-            const fpsElement = document.getElementById("fps");
-            const fpsSmoothing = 0.9;
-            var fpsMeasure = 0;
-
-            window.gameLoop = async function (timestamp) {
-                const { getAssemblyExports } =
-                    await globalThis.getDotnetRuntime(0);
-                const exports = await getAssemblyExports("BlazorDoom.dll");
-
-                const duration = timestamp - lastFrameTimestamp;
-                if (duration >= frameTime) {
-                    var startTime = performance.now();
-                    // measure from https://stackoverflow.com/a/87333/13782429
-                    const currentFps = 1000 / duration;
-                    fpsMeasure =
-                        fpsMeasure * fpsSmoothing +
-                        currentFps * (1 - fpsSmoothing);
-                    lastFrameTimestamp = timestamp;
-                    exports.BlazorSample.Pages.CallDotNet1.GetMessageFromDotnet();
-                    DotNet.invokeMethod(
-                        "BlazorDoom",
-                        "GameLoop",
-                        downKeys,
-                        upKeys
-                    );
-                    upKeys.splice(0, upKeys.length);
-                    var endTime = performance.now();
-                    fpsElement.innerText = `${fpsMeasure.toFixed(
-                        0
-                    )} FPS - ${duration.toFixed(0)}ms - ${(
-                        endTime - startTime
-                    ).toFixed(0)}ms`;
-                }
-                window.requestAnimationFrame(window.gameLoop);
-            };
-
-            const sounds = new Map();
-
-            function playSound(samples, sampleRate, identifier, position) {
-                //console.log(position);
-                if (!audioHelper) {
-                    return;
-                }
-                sounds.set(identifier, samples);
-                audioHelper.playByteArray(samples, sampleRate);
-            }
-
-            function playLoadedSound(identifier, sampleRate, position) {
-                if (!audioHelper) {
-                    return;
-                }
-                const sound = sounds.get(identifier);
-                audioHelper.playByteArray(sound, sampleRate);
-            }
-
-            function initAudioHelper() {
-                if (!audioHelper) {
-                    audioHelper = new AudioHelper();
-                }
-            }
-        </script>
     </body>
 </html>
