--- a/index.html
+++ b/index.html
@@ -7,11 +7,40 @@
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
         <title>BlazorDoom</title>
-        <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-        <link href="css/app.css" rel="stylesheet" />
+        <link href="bootstrap.min.css" rel="stylesheet" />
+        <link href="app.css" rel="stylesheet" />
         <link rel="manifest" href="manifest.json" />
 
-        <script></script>
+        <script>
+            const upKeys = [];
+            const downKeys = [];
+
+            window.addEventListener("DOMContentLoaded", () => {
+                document.body.addEventListener("keydown", function (e) {
+                    if (e.target.tagName === "INPUT") {
+                        return true;
+                    }
+                    const index = downKeys.indexOf(e.keyCode);
+                    if (index < 0) {
+                        downKeys.push(e.keyCode);
+                    }
+                    e.preventDefault();
+                    return false;
+                });
+                document.body.addEventListener("keyup", function (e) {
+                    if (e.target.tagName === "INPUT") {
+                        return true;
+                    }
+                    const index = downKeys.indexOf(e.keyCode);
+                    if (index > -1) {
+                        downKeys.splice(index, 1);
+                    }
+                    upKeys.push(e.keyCode);
+                    e.preventDefault();
+                    return false;
+                });
+            });
+        </script>
 
         <script type="module" src="./audioutils.js"></script>
         <script type="module" src="./main.js"></script>
