--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div id="install_button" style="visibility: hidden"></div>
     <div id="fps"></div>
     <canvas id="canvas" width="320" height="200" style="width: 80%; height: auto; image-rendering: pixelated"></canvas>
+    <button onclick="console.log('clicked sound button');">Click to enable sound APIs</button>
 </body>
 
 </html>
