--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,88 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <base />
         <meta charset="utf-8" />
+
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
+        <meta
+            name="description"
+            content="BlazorDoom - A dotnet WASM port of ManagedDoom"
+        />
+        <meta name="keywords" content="Blazor, Doom, Game, WebAssembly, WASM" />
         <title>BlazorDoom</title>
         <link href="./bootstrap.min.css" rel="stylesheet" />
         <link href="./app.css" rel="stylesheet" />
         <link rel="manifest" href="./manifest.json" />
-
-        <script>
-            const upKeys = [];
-            const downKeys = [];
-
-            window.addEventListener("DOMContentLoaded", () => {
-                // https://blog.elmah.io/how-to-fix-blazor-wasm-base-path-problems
-                const path = window.location.pathname.split("/");
-                const base = document.getElementsByTagName("base")[0];
-                if (window.location.host.includes("localhost")) {
-                    base.setAttribute("href", "/");
-                } else if (path.length > 2) {
-                    base.setAttribute("href", "/" + path[1] + "/");
-                } else if (path[path.length - 1].length != 0) {
-                    window.location.replace(
-                        window.location.origin +
-                            window.location.pathname +
-                            "/" +
-                            window.location.search
-                    );
-                }
-                document.body.addEventListener("keydown", function (e) {
-                    if (e.target.tagName === "INPUT") {
-                        return true;
-                    }
-                    const index = downKeys.indexOf(e.keyCode);
-                    if (index < 0) {
-                        downKeys.push(e.keyCode);
-                    }
-                    e.preventDefault();
-                    return false;
-                });
-                document.body.addEventListener("keyup", function (e) {
-                    if (e.target.tagName === "INPUT") {
-                        return true;
-                    }
-                    const index = downKeys.indexOf(e.keyCode);
-                    if (index > -1) {
-                        downKeys.splice(index, 1);
-                    }
-                    upKeys.push(e.keyCode);
-                    e.preventDefault();
-                    return false;
-                });
-            });
-
-            if ("serviceWorker" in navigator) {
-                navigator.serviceWorker
-                    .register("service-worker.js")
-                    .then((registration) => {
-                        console.log("Service Worker registered:", registration);
-                    })
-                    .catch((error) => {
-                        console.error(
-                            "Service Worker registration failed:",
-                            error
-                        );
-                    });
-            }
-        </script>
         <script type="module" src="./main.js"></script>
     </head>
 
     <body>
-        <div id="install_button" style="visibility: hidden"></div>
+        <div id="install_button"></div>
         <div id="fps"></div>
-        <canvas
-            id="canvas"
-            width="320"
-            height="200"
-            style="width: 80%; height: auto; image-rendering: pixelated"
-        ></canvas>
+        <canvas id="canvas" width="320" height="200"></canvas>
         <button onclick="console.log('clicked sound button');">
             Click to enable sound APIs
         </button>
