Add toggle max FPS button

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -30,6 +30,7 @@
       <option value="freedoom2">FreeDoom 2</option>
     </select>
     <button id="load_wad">Load WAD</button>
+    <button id="toggle_fps">Toggle max FPS</button>
   </div>
   <div id="fps"></div>
   <canvas id="canvas" width="320" height="200"></canvas>
